# tensorLib

./: .gitignore  CMakeLists.txt  README.md  TODO  a.cpp  b.cpp  compile_flags.txt
app/: README.md  forward_MNIST.cpp  forward_MNIST_conv.cpp  test.cpp
app/cv/: README.md
app/cv/src/: forward_MNIST_quantize.cpp
app/llm/: README.md
app/llm/include/: Transformer.hpp  llama2.hpp
app/llm/src/: Tokenizer.cpp  Transformer.cpp  llama2.cpp  main.cpp
app/llm/test/: test_tokenizer.cpp  test_transformer.cpp
app/util/: README.md
dataset/: README
include/: Tensor.hpp  readCSV.hpp  readMNIST.hpp
include/nn/: modules.hpp
model/llama2_7b/include/: ActivationBuffer.hpp  Tokenizer.hpp  Transformer.hpp  llama2.hpp
model/llama2_7b/src/: Tokenizer.cpp  Transformer.cpp  llama2.cpp  main.cpp
model/llama2_7b/test/: test_transformer.cpp
script/: export.py  export.sh
src/: Tensor.cpp  readCSV.cpp  readMNIST.cpp
tensorLib/: README
tensorLib/include/: Log.hpp  Tensor.hpp  readCSV.hpp  util.hpp
tensorLib/include/device/: CPU.hpp  CUDA.hpp  Device.hpp  ptx.hpp
tensorLib/include/device/cpu/: CPU.hpp
tensorLib/include/device/cuda/: CUDA.cuh  binary.cuh  reduce.cuh  warp.cuh
tensorLib/include/nn/: activation.hpp  container.hpp  conv.hpp  embedding.hpp  linear.hpp  modules.hpp  rmsNorm.hpp
tensorLib/include/ops/: matmul.hpp  reduce.hpp  reduceArg.hpp
tensorLib/src/: Log.cpp  Tensor.cpp  readCSV.cpp  readMNIST.cpp
tensorLib/src/device/: CPU.cpp  CUDA.cu  Device.cpp
tensorLib/src/device/cpu/: CPU.cpp  softmax.cpp
tensorLib/src/device/cuda/: CUDA.cu  binary.cu  gemm.cu  gemv.cu  hgemm.cu  reduce.cu  reduceArg.cu  rms_norm.cu  sgemm.cu  sgemv.cu  softmax.cu
tensorLib/src/nn/: activation.cpp  container.cpp  conv.cpp  embedding.cpp  linear.cpp  modules.cpp  rmsNorm.cpp
tensorLib/src/ops/: binary.cpp  matmul.cpp  reduce.cpp
tensorLib/test/: tensor_bindings.cpp  test.md  test_device.cpp  test_modules.py  test_ops.py  test_shared_ptr.cpp  test_tensor.cpp  test_tensor.py  test_tensor_getData.cpp
tensorLib/test/cuda_benchmark/: gemm_benchmark.cu  gemv_benchmark.cu  hgemv_benchmark.cu  sgemm_benchmark.cpp
tensorLib/test/cuda_fuse_op/: test_rms_norm.cpp
tensorLib/test/fp16/: test_fp16.cu
tensorLib/test/include/: test.hpp
tensorLib/test/python/: tensor_bindings.cpp  test_modules.py  test_ops.py  test_tensor.py
tensorLib/test/util/: compare.cu
test/: test_readCSV.cpp  test_readMNIST.cpp  test_tensor.cpp
test/nn/: test_modules.cpp
train/: MNIST_TRAIN.py
weights/: README  fc_weight.csv
